## $Id: Makefile.am,v 1.22 2006/09/19 21:15:01 adam Exp $
## Copyright (C) 2001, Index Data

AM_CPPFLAGS = -I$(top_srcdir)/include $(XML2_CFLAGS)

bin_PROGRAMS = zoomsh
noinst_PROGRAMS = zoomtst1 zoomtst2 zoomtst3 zoomtst4 zoomtst5 zoomtst6 zoomtst7 zoomtst8 zoomtst9 zoomtst10 zoom-benchmark zoom-ka zoom-bug-641

LDADD = ../src/libyaz.la $(READLINE_LIBS)

zoomtst1_SOURCES = zoomtst1.c
zoomtst2_SOURCES = zoomtst2.c
zoomtst3_SOURCES = zoomtst3.c
zoomtst4_SOURCES = zoomtst4.c
zoomtst5_SOURCES = zoomtst5.c
zoomtst6_SOURCES = zoomtst6.c
zoomtst7_SOURCES = zoomtst7.c
zoomtst8_SOURCES = zoomtst8.c
zoomtst9_SOURCES = zoomtst9.c
zoomtst10_SOURCES = zoomtst10.c
zoomsh_SOURCES = zoomsh.c
zoom_benchmark_SOURCES = zoom-benchmark.c
zoom_ka_SOURCES = zoom-ka.c
zoom_bug_641_SOURCES = zoom-bug-641.c


