## $Id: Makefile.am,v 1.15 2006/09/05 10:05:14 adam Exp $

commondir=$(datadir)/doc/$(PACKAGE)$(PACKAGE_SUFFIX)/common

common_DATA = style1.css id.png

SUPPORTFILES = \
 xml.dcl \
 common.ent \
 id.eps \
 ref2dbinc.xsl \
 stripref.xsl \
 print.dsl.in \
 id.htmlhelp.xsl \
 id.man.xsl \
 id.tkl.xsl 

EXTRA_DIST = $(SUPPORTFILES) $(common_DATA) README

