## $Id: Makefile.am,v 1.38 2007/01/08 10:48:07 adam Exp $

pkginclude_HEADERS= backend.h ccl.h ccl_xml.h cql.h comstack.h \
 diagbib1.h diagsrw.h diagsru_update.h sortspec.h log.h logrpn.h marcdisp.h \
 nmem.h nmem_xml.h odr.h \
 oid.h options.h otherinfo.h pquery.h prt-ext.h querytowrbuf.h \
 readconf.h record_conv.h retrieval.h statserv.h \
 tcpip.h test.h timing.h unix.h tpath.h wrbuf.h xmalloc.h \
 yaz-ccl.h yaz-iconv.h yaz-util.h yaz-version.h yconfig.h proto.h \
 xmlquery.h libxml2_error.h xmltypes.h \
 \
 ill.h ill-core.h item-req.h z-accdes1.h z-accform1.h \
 z-acckrb1.h z-core.h z-date.h z-diag1.h z-espec1.h z-estask.h z-exp.h \
 z-grs.h z-mterm2.h z-opac.h z-rrf1.h z-rrf2.h z-sum.h z-sutrs.h z-uifr1.h \
 z-univ.h z-oclcui.h zes-expi.h zes-exps.h zes-order.h zes-pquery.h \
 zes-psched.h zes-admin.h zes-pset.h zes-update.h zes-update0.h \
 zoom.h z-charneg.h charneg.h soap.h srw.h zgdu.h

